# hereditary

./: Cargo.toml  README.md
crates/forwarding/: Cargo.toml
crates/forwarding/src/: lib.rs
crates/forwarding_gen/: Cargo.toml
crates/forwarding_gen/src/: forwarding_derive_input.rs  forwarding_derive_member_receiver.rs  forwarding_trait_impl_input.rs  forwarding_trait_impl_receiver.rs  lib.rs  method_member_adapter.rs
crates/trait_info/: Cargo.toml
crates/trait_info/src/: lib.rs
crates/trait_info_gen/: Cargo.toml
crates/trait_info_gen/src/: lib.rs  simple_trait_info.rs  trait_path_attrib.rs
examples/hereditary_impl_test/: Cargo.toml
examples/hereditary_impl_test/src/: main.rs
examples/macro_bridge_derive/: Cargo.toml
examples/macro_bridge_derive/src/: main.rs
examples/macro_bridge_impltrait/: Cargo.toml
examples/macro_bridge_impltrait/src/: main.rs
examples/receivers_codegen/: Cargo.toml
examples/receivers_codegen/src/: main.rs
examples/trait_codegen/: Cargo.toml
examples/trait_codegen/src/: main.rs
src/: lib.rs
tests/: traits.rs
