[package]
name = "forwarding_gen"
version = "0.1.0"
edition = "2021"
autors = ["Francisco Leon <https://github.com/superoptimo>"]
license = "Apache-2.0"
description = "Procedural macros for emulating OOP Inheritance in Rust"
keywords = ["OOP", "inheritance", "forwarding", "newtype", "composition", "trait", "derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait_info_gen = {path = "../trait_info_gen"}
base32ct = {version = "0.2.0",features=["alloc"]}
proc-macro2 = "1.0.54"
quote = "1.0.26"
sha3 = "0.10.8"
syn = { version = "2.0.10", features = ["full", "fold", "parsing", "extra-traits"] }