[package]
name = "trait_info_gen"
version = "0.1.0"
edition = "2021"
autors = ["Francisco Leon <https://github.com/superoptimo>"]
license = "Apache-2.0"
description = "Procedural macros for obtaining Trait information at compile time"
keywords = ["reflection", "compile-time", "trait", "introspection"]
categories = ["reusability", "design-pattern"]
repository = "https://github.com/datapture/hereditary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32ct = {version = "0.2.0",features=["alloc"]}
proc-macro2 = "1.0.54"
quote = "1.0.26"
sha3 = "0.10.8"
syn = { version = "2.0.10", features = ["full", "fold", "parsing", "extra-traits"] }
