[package]
name = "trait_codegen"
version = "0.1.0"
edition = "2021"
autors = ["Francisco Leon <https://github.com/superoptimo>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait_info_gen = { path = "../../crates/trait_info_gen" }
proc-macro2 = "1.0.54"
syn = { version = "2.0.10", features = ["parsing"] }